# bqvalid

./: .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  README.md
benches/: README.md  memory_profile.rs  unused_column_in_cte.rs
docs/: contribute.md  rules.md
sql/: current_date_and_subquery_with_between_are_used.sql  current_date_is_used.sql  invalid_group_by_column_not_in_clause.sql  invalid_group_by_in_subquery.sql  invalid_group_by_mixed_qualified.sql  invalid_group_by_multiple_violations.sql  invalid_group_by_qualified_column.sql  sample.sql  subquery_with_between.sql  subquery_with_between_from.sql  subquery_with_binary_op.sql  unnecessary_order_by_in_cte.sql  unnecessary_order_by_in_subquery.sql  unused_column_in_cte_aggregate_in_final_select.sql  unused_column_in_cte_column_alias.sql  unused_column_in_cte_complex.sql  unused_column_in_cte_function_argument.sql  unused_column_in_cte_join_only.sql  unused_column_in_cte_join_where.sql  unused_column_in_cte_multiple_alias.sql  unused_column_in_cte_pivot.sql  unused_column_in_cte_qualify.sql  unused_column_in_cte_select_star_chain.sql  unused_column_in_cte_select_star_from_join.sql  unused_column_in_cte_select_star_multiple_joins.sql  unused_column_in_cte_select_star_with_unused.sql  unused_column_in_cte_simple.sql  unused_column_in_cte_table_alias.sql  unused_column_in_cte_table_alias_join.sql  unused_column_in_cte_table_alias_without_as.sql  unused_column_in_cte_unnest_in_from.sql  unused_column_in_cte_where_with_qualified_table.sql  unused_column_in_cte_with_table_alias.sql  valid_cte.sql  valid_group_by_all_aggregates.sql  valid_group_by_approx_functions.sql  valid_group_by_mixed_case_aggregates.sql  valid_group_by_qualified_column.sql  valid_group_by_with_aggregates.sql  (+1 more)
src/: lib.rs  (+3 more)
(+32 files in other folders)
