[package]
name = "bqvalid"
authors = ["hirosassa <hiro.sassa@gmail.com>"]
description = "SQL validator tool for BigQuery standard SQL."
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.22.6"
tree-sitter-sql-bigquery = "0.7.0"
baz-tree-sitter-traversal = "0.1.4"
clap = { version = "3.2.6", features = ["derive"] }
walkdir = "2.3.2"

[dev-dependencies]
tempfile = "3"