[package]
name = "bqvalid"
authors = ["hirosassa <hiro.sassa@gmail.com>"]
description = "SQL validator tool for BigQuery standard SQL."
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.22.6"
tree-sitter-sql-bigquery = "0.7.0"
baz-tree-sitter-traversal = "0.1.4"
clap = { version = "4.5.6", features = ["derive"] }
walkdir = "2.3.2"
log = "0.4.21"
env_logger = "0.11.3"
clap-verbosity-flag = "2.2.0"

[dev-dependencies]
rstest = "0.21.0"
tempfile = "3"
